websockets issue fix